Added folder dialogue to pick rootFolder

--- a/WPF Project/Music Shuffler/Music Shuffler/MainWindow.xaml
+++ b/WPF Project/Music Shuffler/Music Shuffler/MainWindow.xaml
@@ -18,10 +18,12 @@
 		<Grid Grid.Row="0">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="2*"/>
+				<ColumnDefinition Width="auto"/>
 				<ColumnDefinition Width="*"/>
 			</Grid.ColumnDefinitions>
 			<TextBox Name="txtRootFolder" Grid.Column="0" ToolTip="Enter root folder"/>
-			<Button Name="btnGetAlbums" Grid.Column="1">Get Albums</Button>
+			<Button Name="btnChooseRoot" Grid.Column="1" Click="btnChooseRootClicked">. . .</Button>
+			<Button Name="btnGetAlbums" Grid.Column="2" Click="btnGetAlbumsClicked">Get Albums</Button>
 		</Grid>
 		<ListBox Grid.Row="1" HorizontalContentAlignment="Stretch">
 			<ListBoxItem>
@@ -30,7 +32,7 @@
 						<ColumnDefinition Width="2*"/>
 						<ColumnDefinition Width="*"/>
 					</Grid.ColumnDefinitions>
-					<TextBlock>Folder Name</TextBlock>
+					<CheckBox>Album Name</CheckBox>
 					<CheckBox Grid.Column="1">Shuffle</CheckBox>
 				</Grid>
 			</ListBoxItem>
