Fixed numbering and a few other small things

--- a/WPF Project/Music Shuffler/Music Shuffler/MainWindow.xaml
+++ b/WPF Project/Music Shuffler/Music Shuffler/MainWindow.xaml
@@ -52,7 +52,7 @@
 			</Grid.ColumnDefinitions>
 			<TextBox Name="txtOutputFolder" Grid.Column="0" ToolTip="Enter output folder"/>
 			<Button Name="btnChooseOutput" Grid.Column="1" Click="btnChooseOutputClicked">. . .</Button>
-			<Button Name="btnMakePlaylist" Grid.Column="2">Make Playlist</Button>
+			<Button Name="btnMakePlaylist" Grid.Column="2" Click="btnMakePlaylistClicked">Make Playlist</Button>
 		</Grid>
 
 
