--- a/WPF Project/Music Shuffler/Music Shuffler/MainPage.xaml
+++ b/WPF Project/Music Shuffler/Music Shuffler/MainPage.xaml
@@ -40,6 +40,15 @@
 			<Setter Property="VerticalAlignment" Value="Center"/>
 			<Setter Property="VerticalContentAlignment" Value="Center"/>
 		</Style>
+		<Style x:Key="styleConsole" TargetType="{x:Type TextBox}">
+			<Setter Property="Margin" Value="0"/>
+			<Setter Property="Padding" Value="2"/>
+			<Setter Property="BorderThickness" Value="0"/>
+			<Setter Property="TextWrapping" Value="Wrap"/>
+			<Setter Property="Foreground" Value="Lime"/>
+			<Setter Property="FontFamily" Value="Consolas"/>
+			<Setter Property="Background" Value="Black"/>
+		</Style>
 	</Page.Resources>
 	<Grid Margin="20px">
 		<Grid.RowDefinitions>
@@ -64,9 +73,9 @@
 			<Button Name="btnGetAlbums" Grid.Row="0" Grid.Column="1" Click="btnGetAlbumsClicked" Style="{StaticResource styleButton}">Get Albums</Button>
 				<CheckBox Name="chkShuffleAll" Grid.Row="0" Grid.Column="2" Click="chkShuffleAllClicked" Style="{StaticResource styleCheckbox}">Shuffle All</CheckBox>
 		</Grid>
-		<ListBox Name="lstbxAlbums" Grid.Row="1" HorizontalContentAlignment="Stretch">
+		<ListBox Name="lstbxAlbums" Grid.Row="1" HorizontalContentAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Disabled"/>
+		<TextBox Name="txtMessageBlock" Grid.Row="1" Visibility="Hidden" Style="{StaticResource styleConsole}" VerticalScrollBarVisibility="Auto"/>
 
-		</ListBox>
 
 		<Grid Grid.Row="2">
 			<Grid.ColumnDefinitions>
