--- a/WPF Project/Music Shuffler/Music Shuffler/MainWindow.xaml
+++ b/WPF Project/Music Shuffler/Music Shuffler/MainWindow.xaml
@@ -5,5 +5,5 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Music_Shuffler"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Music Shuffler ~Daniel Dowsett~" Height="350" Width="525">
 </Window>
