Added STOP button

--- a/WPF Project/Music Shuffler/Music Shuffler/MainPage.xaml
+++ b/WPF Project/Music Shuffler/Music Shuffler/MainPage.xaml
@@ -90,6 +90,7 @@
 			<TextBox Name="txtOutputFolder" Grid.Column="0" ToolTip="{Binding ElementName=txtOutputFolder, Path=Text}" Style="{StaticResource styleTextBox}"/>
 			<Button Name="btnChooseOutput" Grid.Column="1" Click="btnChooseOutputClicked" Style="{StaticResource styleButton2}">. . .</Button>
 			<Button Name="btnMakePlaylist" Grid.Column="2" Click="btnMakePlaylistClicked" Style="{StaticResource styleButton2}">Make Playlist</Button>
+			<Button Name="btnCancel" Grid.Column="2" Style="{StaticResource styleButton2}" Visibility="Hidden">STOP</Button>
 		</Grid>
 
 
